# blob

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: constants.rs  lib.rs  main.rs
src/algorithms/: mod.rs  sorting.rs
src/algorithms/test/: sorting_test.rs
src/gui/: commands.rs  image_area.rs  main_window.rs  menu_bar.rs  mod.rs  sidebar.rs
src/image_processing/: filters.rs  generators.rs  image.rs  mod.rs  pixel.rs
