[package]
name = "image_processing_exercise"
version = "0.1.0"
edition = "2021"
authors = ["Zvonimir Pervan <z.pervan65@gmail.com>"]

[dependencies]
druid = { path = "lib/druid/druid", features = ["image", "png"]}
image = "0.21.1"
num-complex = "0.2.1"
clap = { version = "3.1.6", features = ["derive"] }
